<?xml version="1.0" encoding="utf-8"?>
<resources>

    <string name="app_name">scoutt</string>
    <string name="app_name_Des">Destinations</string>

    <string name="action_settings">Settings</string>
    <string name="MainMenuStart">Start</string>
    <string name="mainMenuRankings">Rankings</string>
    <string name="MainMenuSettings">Settings</string>
    <string name="LangSettingsTitle">Languages</string>
    <string name="BasicSettingsTitle">Basic settings</string>
    <string name="BasicSettingsSum">Languages, rankings, and more</string>
    <string name="LangSelectSetting">Select a language</string>
    <string name="ModeHeader">Select a game mode</string>
    <string name="Mode1Selection">Choose destination</string>
    <string name="Mode2Selection">Choose start location and destination</string>
    <string name="MainTitle">Welcome to scoutt!</string>
    <string name="title_activity_score_prompt">Hi Score!</string>
    <string name="hello_world">Hello world!</string>
    <string name="des_title">Choose Destination</string>
    <string name="search_hint">Search Places</string>
    <string name="action_search">Search</string>
    <string name="search_settings">Search Places</string>
    <string name="GameFinishWin">You Win!</string>
    <string name="Settings_Clear_Rankings_Title">Clear rankings</string>
    <string name="Settings_Clear_Rankings_Header_Title">Clear Rankings</string>
    <string name="GameFinishLose">You lose!</string>
    <string name="GameFinishTime">Time Elapsed:</string>
    <string name="GameFinishSeconds"> seconds</string>
    <string name="GameFinishSteps">Steps:</string>
    <string name="GameFinishTryAgain">Press back to try again!</string>
    <string name="GameFinishScore">Your score:</string>
</resources>
