<?xml version="1.0" encoding="utf-8"?>

<LinearLayout xmlns:android="http://schemas.android.com/apk/res/android"
              xmlns:tools="http://schemas.android.com/tools"
              android:orientation="vertical"
              android:background="#EED8B3"
              android:layout_width="fill_parent"
              android:layout_height="fill_parent"
              android:paddingLeft="@dimen/activity_horizontal_margin"
              android:paddingRight="@dimen/activity_horizontal_margin"
              android:paddingTop="@dimen/activity_vertical_margin"
              android:paddingBottom="@dimen/activity_vertical_margin"
              tools:context=".MainActivity">


    <LinearLayout xmlns:android="http://schemas.android.com/apk/res/android"
                  xmlns:tools="http://schemas.android.com/tools"
                  android:orientation="vertical"
                  android:background="#EED8B3"
                  android:layout_width="fill_parent"
                  android:layout_height="100dp">

        <ImageView
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:id="@+id/imgBanner"/>

    </LinearLayout>

    <Button
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:text="@string/MainMenuStart"
            android:background="#EED8B3"
            android:textColor="#A13222"
            android:id="@+id/btnStart"
            android:layout_gravity="center"/>

    <Button
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:text="@string/mainMenuRankings"
            android:background="#EED8B3"
            android:textColor="#A13222"
            android:id="@+id/btnRankings"
            android:layout_gravity="center"/>

    <Button
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:text="@string/MainMenuSettings"
            android:background="#EED8B3"
            android:textColor="#A13222"
            android:id="@+id/btnSettings"
            android:layout_gravity="center"/>

    <Button
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:text="ScoreTest"
            android:background="#EED8B3"
            android:textColor="#A13222"
            android:id="@+id/btnInser"
            android:layout_gravity="center"/>

</LinearLayout>